--- a/style.css
+++ b/style.css
@@ -1,13 +1,41 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+html, body {
+    background-color: aliceblue;
+}
+nav {
+    width: 100%;
+    color: black;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    padding: 10px;
+
+}
+
+
+a {
+    width: 10%;
+}
 html {
-    border: 3px solid blue;
+    border: 3px solid black;
     text-align: center;
     list-style-type: none;
 
 }
+header {
+    align-items: center;
+    padding: 10px;
+}
 main {
     border: 10px solid grey;
-    border-top: 5px solid;
     border-bottom: 0;
+    padding: 20px;
+    
 }
 
 footer {
@@ -15,90 +43,3 @@ footer {
     border-right: 10px solid grey;
     border-bottom: 10px solid grey;
 }
-
-
-
-
-
-
-
-
-/* 
-h4 {
-    color:aqua;
-    text-align: 
-    center;
-    text-decoration: underline;
-}
-p {
-    font-family: Georgia;
-}
-nav {
-}
-.header {
-    background-color: lightblue;
-    text-align: center;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-}
-p {
-    color: darkslategray;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-}
-h3 {
-  color: purple;
-  text-align: center;
-}
-body {background-blend-mode: black;
-}
-h3 {color: sea-blue;
-font-family: Times New Roman;
-font-style: background-blend-mode;
-font-size: 36xp;
-}
-h3{
-    bottom:single-button
-}
-
-/* Styling my Icon buttons 
-.btn {
-  background-color: DodgerBlue; 
-  border: none; 
-  color: white; 
-  padding: 12px 16px;
-  font-size: 16px; 
-  cursor: pointer;
-}
-
-/* Darker background 
-.btn:hover {
-  background-color: RoyalBlue;
-}
-h1 {
-    color: darkblue;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    font-size: 24px;
-}
-h2 {
-    color: darkcyan;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    font-size: 20px;
-}
-html,body {
-    background-color: lightgray;
-    font-family: Arial, sans-serif;
-    margin: 0;
-}
-
-/* styling my Icons
-.icon {
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    display: inline-block;
-    background-size: cover;
-}*/
